--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>HTML, CSS and SASS Boilerplate</title>
-    <meta
-      name="description"
-      content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
-    <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>HTML, CSS and SASS Boilerplate</title>
+  <meta name="description" content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    .container {
+      display: flex;
+    }
+
+    .sidebar {
+      width: 280px;
+    }
+
+    .main {
+      flex-grow: 100;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <aside class="sidebar"></aside>
+    <div class="main"></div>
+  </div>
+</body>
+
 </html>
