--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       width: 280px;
     }
 
-    .main {
+    main {
       flex-grow: 100;
     }
   </style>
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <aside class="sidebar"></aside>
-    <div class="main"></div>
+    <main></main>
   </div>
 </body>
 
